# Invoice-validator

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  env.py  grader.py  main.py  models.py  tasks.py  validator.py
scripts/: validate-submission.sh
server/: app.py
