[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "invoice-validation-env"
version = "1.0.0"
description = "An OpenEnv-compatible RL environment for invoice validation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ankita Tiwari" }
]
keywords = ["openenv", "reinforcement-learning", "invoice", "validation", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.2",
    "PyYAML>=6.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
invoice-env-server = "app.main:app"
invoice-inference = "inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/ankitaatr/invoice-validation-env"
Repository = "https://github.com/ankitaa20tr/Invoice-validator-"
